# yes-chef

./: .env.example  .gitignore  Dockerfile  README.md  SPEC.md  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
.interface-design/: system.md
alembic/: env.py
alembic/versions/: 39095ba57274_add_missing_indexes.py  4faa7c4d4593_initial_schema.py  8388865c994d_migrate_to_pgvector.py  a3f9c1e82b47_rename_jobs_to_quotes_work_items_to_menu_items.py  d1831d422c32_catalog_items_and_source_item_id.py
data/: menu_spec.json  quote_schema.json  sysco_catalog.csv
docs/: concepts.md  plan.md  spec.md  tasks.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: App.tsx  api.ts  app.css  design-tokens.css  main.tsx  schemas.ts  style.css
frontend/src/components/ui/: badge.tsx  button.tsx  input.tsx  textarea.tsx
frontend/src/views/: DashboardView.tsx  KitchenView.css  KitchenView.jsx  KitchenView.tsx  KitchenViewPlaceholder.tsx  PassView.css  PassView.jsx  PassView.tsx  SubmitView.css  SubmitView.tsx
src/yes_chef/: config.py  events.py
src/yes_chef/api/: __init__.py  app.py
src/yes_chef/catalog/: __init__.py  provider.py  service.py
src/yes_chef/db/: engine.py  models.py
src/yes_chef/decomposition/: __init__.py  engine.py
src/yes_chef/orchestrator/: __init__.py  engine.py
src/yes_chef/resolution/: __init__.py  engine.py
tests/: conftest.py  embedding_test.py  test_api.py  test_catalog_provider.py  test_catalog_service.py  test_db.py  test_decomposition.py  test_orchestrator.py  test_resolution.py  test_sse.py
tests/curl/: 01_health.yml  02_submit_and_track.yml  03_wait_and_get_quote.yml  04_invalid_requests.yml  04_submit_job.yml  05_multi_item_job.yml  06_quote_not_ready.yml  07_sse_stream.yml  job_not_found.yml  job_status.yml  quote_not_ready.yml  runner.py  submit_invalid.yml
